--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100..900&display=swap");
 
 * {
   margin: 0;
@@ -9,7 +9,8 @@
 }
 
 body {
-  background: url("./img/background.png");
+  background: url("./img/background1.png");
+  background-size: cover;
 }
 
 .container {
@@ -40,72 +41,95 @@ body {
   cursor: pointer;
   float: right;
   font-weight: 700;
-
 }
 
-.button-add-task:hover{
-    opacity: 0.8;
+.button-add-task:hover {
+  opacity: 0.8;
 }
 
-.button-add-task:active{
-    opacity: 0.6;
+.button-add-task:active {
+  opacity: 0.6;
 }
 
 .list-tasks {
-    width:100%;
-    list-style:none;
-    margin-top:20px;
-
-
+  width: 100%;
+  list-style: none;
+  margin-top: 20px;
 }
 
 .task {
-    background-color:#f2f2f2;
-    box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.2);
-    display:flex;
-    align-items: center;
-    justify-content:space-between; /*joga para o extremo ao lado*/
-    height:50px;
-    padding: 0 15px;
-    margin-bottom:20px;
-    border-radius:5px;
-    cursor:pointer;
-
-
+  background-color: #f2f2f2;
+  box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /*joga para o extremo ao lado*/
+  height: 50px;
+  padding: 0 15px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  cursor: pointer;
 }
-
 
 img {
   height: 25px;
-  opacity: 0;   /*para sumir com os ícones*/
+  opacity: 0; /*para sumir com os ícones*/
   transition: opacity 0.6s ease-in-out;
 }
 
 .task:hover img {
-  opacity: 1;   /*quando passa o mouse, os ícones aparecem*/
-  
+  opacity: 1; /*quando passa o mouse, os ícones aparecem*/
 }
 
-.done{
-  background-color:#00BFFF;
-  text-decoration:line-through;
-
+.done {
+  background-color: #00bfff;
+  text-decoration: line-through;
 }
 
-.toast{
- display:flex;
- background-color: #FF0000;
- align-items:center;
- justify-content:center;
- border-radius:5px;
- margin:0 500px;
- color:#ffff;
- 
+.toast {
+  display: flex;
+  background-color: #ff0000;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  margin: 0 500px;
+  color: #ffff;
 }
 
-.fade-out{
+.fade-out {
   opacity: 0;
   transition: opacity 0.6s ease-in-out;
-  background-color:#00BFFF;
-  color:#7b68ee;
-} 
+  background-color: #00bfff;
+  color: #7b68ee;
+}
+
+@media (max-width: 700px) {
+  body {
+    background-attachment: fixed;
+  }
+
+  .container {
+    width: 350px;
+   }
+
+  .button-add-task {
+    margin: 10px 0 10px;
+    float:left;
+    font-size: 12px;
+    padding:0 10px;
+    width:97%;
+    height:30px;
+  }
+
+  .list-tasks {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .task {
+    height: 30px;
+    margin-bottom: 10px;
+    width:97%;
+  }
+}
+  
+
