--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ img {
   align-items: center;
   justify-content: center;
   border-radius: 5px;
-  margin: 0 500px;
+  margin: 5px 500px;
   color: #ffff;
 }
 
@@ -102,6 +102,57 @@ img {
   color: #7b68ee;
 }
 
+@media (max-width: 1024px) {
+  body {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
+
+  .container {
+    width: 850px;
+  }
+
+  .button-add-task{
+    font-size:30px;
+    width:400px;
+  }
+  
+  input {
+    font-size: 25px;
+  }
+  
+  .input-task::placeholder {
+    font-size: 30px;
+  }
+
+  .task {
+    font-size: 30px;
+  }
+
+  .toast {
+    margin: 5px 200px;
+    font-size: 25px;
+  }
+}
+
+
+
+@media (max-width: 820px) {
+  .container {
+    width: 700px;
+  }
+
+  .button-add-task{
+    font-size:30px;
+    width:300px;
+  }
+
+  .toast {
+    margin: 5px 200px;
+    font-size: 25px;
+  }
+}
+
 @media (max-width: 700px) {
   body {
     background-attachment: fixed;
@@ -109,27 +160,40 @@ img {
 
   .container {
     width: 350px;
-   }
+  }
 
   .button-add-task {
     margin: 10px 0 10px;
-    float:left;
+    float: left;
     font-size: 12px;
-    padding:0 10px;
-    width:97%;
-    height:30px;
+    padding: 0 10px;
+    width: 300px;
+    height: 30px;
+    font-size:20px;
+  }
+
+  input {
+    font-size: 20px;
+  }
+
+  .input-task::placeholder {
+    font-size: 20px;
   }
 
   .list-tasks {
-    width: 100%;
+    width: 250px;
     margin-top: 10px;
+    min-height: 25px;
   }
 
   .task {
     height: 30px;
     margin-bottom: 10px;
-    width:97%;
+    width: 300px;
+    font-size: 20px;
+  }
+
+  .toast {
+    margin: 5px 100px;
   }
 }
-  
-
